# pyhdl_lint

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-09-ast-based-rule-checking-design.md  2026-07-09-configuration-file-loading-design.md  2026-07-09-test-suite-design.md  2026-07-10-multi-file-linting-design.md  2026-07-10-standard-rules-library-design.md  2026-07-10-vhdl-completeness-design.md
guidelines/: systemverilog_guideline.md  verilog_guideline.md  vhdl_guideline.md
pyhdl_lint/: __main__.py
pyhdl_lint/core/: engine.py  parser.py  reporter.py  rule_base.py
pyhdl_lint/languages/systemverilog/rules/: rule_blocking_assignment.py  rule_comb_sensitivity.py  rule_logic_type.py  rule_module_naming.py  rule_parameter_naming.py  rule_port_ordering.py  rule_reset_active_low.py
pyhdl_lint/languages/verilog/rules/: rule_blocking_assignment.py  rule_comb_sensitivity.py  rule_module_naming.py  rule_parameter_naming.py  rule_port_ordering.py  rule_reset_active_low.py
pyhdl_lint/languages/vhdl/rules/: rule_clocked_sensitivity.py  rule_comb_sensitivity.py  rule_entity_naming.py  rule_forbidden_libraries.py  rule_fsm_default_assign.py  rule_fsm_redundant_else.py  rule_fsm_transitions.py  rule_generic_prefix.py  (+16 more)
pyhdl_lint/utils/: config.py
tests/: helpers.py  test_ast_rules.py  test_config.py  test_file.sv  test_file.v  test_file.vhd  test_main.py  test_smoke.py  test_systemverilog_ast_rules.py  test_verilog_ast_rules.py  test_verilog_rules.py  test_vhdl_ast_rules.py  test_vhdl_rules.py  vhdl_test_guidelines.vhd
