[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhdl_lint"
version = "0.1.0"
description = "A modular HDL linter for VHDL, Verilog, and SystemVerilog"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "colorama",
]

[project.scripts]
pyhdl-lint = "pyhdl_lint.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhdl_lint*"]
